<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="moc.nahba.github.views.viewmodels.GitHubViewModel"/>
    </data>
    <RelativeLayout
        android:id="@id/fragmentRootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@id/titleView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/fira_sans"
            android:gravity="center"
            android:minLines="1"
            android:saveEnabled="true"
            android:text="@string/click_me"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/slate"
            android:textIsSelectable="false"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/userInputView"
            style="@style/InputBoxStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleView"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/user_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/etUser"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/allowed_digits"
                android:fontFamily="@font/fira_sans"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress|textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@id/btnFetch"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userInputView"
            android:layout_marginHorizontal="72dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/fira_sans"
            android:gravity="center"
            android:text="@string/fetch"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnFetch"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@color/transparent"
                android:clipToPadding="false"
                android:fadingEdge="none"
                android:scrollbars="none"/>
            <TextView
                android:id="@id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:clickable="false"
                android:contextClickable="false"
                android:enabled="false"
                android:focusable="false"
                android:fontFamily="@font/fira_sans"
                android:gravity="center"
                android:longClickable="false"
                android:minLines="111"
                android:saveEnabled="true"
                android:text="@string/error_repo_not_found"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone"
                tools:targetApi="m"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>